# piped

./: CHANGELOG.md  Cargo.toml  VERSION.toml  cliff.toml  sonar-project.properties
.github/: dependabot.yaml
.github/workflows/: audit.yaml  check.yaml  release.yaml
src/: cli.rs  main.rs  utils.rs
