[package]
name = "pipe-cli"
version = "0.1.0"
edition = "2024"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
description = "A simple command line tool to pipe data between commands"
license = "MIT"
repository = "https://github.com/annie444/pipe"
homepage = "https://github.com/annie444/pipe"

[[bin]]
name = "pipe"
path = "src/main.rs"
test = false
bench = false

[dependencies]
clap = { version = "4.5.42", features = ["derive", "env"] }
shlex = "1.3.0"
