[package]
name = "pipe-cli"
version = "0.2.0"
edition = "2024"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
description = "A simple command line tool to pipe data between commands"
license = "MIT"
repository = "https://github.com/annie444/piped"
homepage = "https://github.com/annie444/piped"

[[bin]]
name = "pipe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
shlex = "1.3.0"
sysinfo = "0.37.2"
